lab1/Test/L1-A-5-89.cmm
float ;
struct APG70MYUJr_mDL &{
}xxsOZeis ( float ZUmz9mg159EhPoW_O , float pNBybdPDXGE 
  , struct {
}UU1nrcT2T3O ) {
}
float gCFPaqa 
;
int [ 554780633 ] , JytcjMMMCG5j , ly6RGL 


;
int eWvLC_4wSUSRv , $FV89ir8ohciPh21 

;
